correction du box-shadow sur les button , correction du tex-overflow sur les etiquette avec ellipsis

--- a/css/button.scss
+++ b/css/button.scss
@@ -7,6 +7,7 @@
   color: white;
   font-size: 20px;
   outline: $gris-claire;
+  box-shadow: 2px 2px 5px grey;
   &:hover {
     opacity: 0.5;
   }
