--- a/css/menu.scss
+++ b/css/menu.scss
@@ -117,6 +117,7 @@ html {
         width: 100%;
         padding-left: 10px;
         border-radius: 20px;
+        flex-wrap: nowrap;
 
         h5 {
           font-size: large;
@@ -133,7 +134,23 @@ html {
           h5 {
             margin: 0;
             margin-top: 5px;
+            text-overflow: ellipsis;
+            max-width: 90%;
+            white-space: pre;
+            overflow: hidden;
           }
+          .detail-text {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            p {
+              text-overflow: ellipsis;
+              max-width: 80%;
+              white-space: pre;
+              overflow: hidden;
+            }
+          }
+
           @media screen and (min-width: 768px) {
             font-size: 20px;
           }
